getList 모두 stream으로 변경